# data_network

./: CMakeLists.txt  opencode.json
src/: main.cpp
src/fusions/: fusion.txt
src/network/: Network.cpp  Network.h
src/network/connectors/: CSVConnector.cpp  CSVConnector.h  ConnectorFactory.cpp  ConnectorFactory.h  DataConnector.cpp  DataConnector.h  ExcelConnector.cpp  ExcelConnector.h  FECConnector.cpp  FECConnector.h  JSONConnector.cpp  JSONConnector.h  PDFConnector.cpp  PDFConnector.h  SQLConnector.cpp  SQLConnector.h  TXTConnector.h  WebConnector.cpp  WebConnector.h  XMLConnector.cpp  XMLConnector.h  ZipReader.cpp  ZipReader.h  ZipWriter.cpp  ZipWriter.h
src/network/core/: Constants.h  DataTable.cpp  DataTable.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  enums.h
src/network/nodes/: MergeNode.cpp  MergeNode.h  RuntimeNode.cpp  RuntimeNode.h  SourceNode.cpp  SourceNode.h  TargetNode.cpp  TargetNode.h  TransformationNode.cpp  TransformationNode.h
src/network/serialization/: NetworkSerializer.h
src/network/transformations/: CalculatedColumnTransformation.cpp  CalculatedColumnTransformation.h  FilterTransformation.cpp  FilterTransformation.h  RemoveDuplicatesTransformation.cpp  RemoveDuplicatesTransformation.h  RenameColumnsTransformation.cpp  RenameColumnsTransformation.h  SelectColumnsTransformation.cpp  SelectColumnsTransformation.h  SortTransformation.cpp  SortTransformation.h  Transformation.cpp  Transformation.h
src/ui/: CustomShapeItem.cpp  CustomShapeItem.h  GraphView.cpp  GraphView.h  TableView.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tableview.cpp  tableview.h
src/ui/controllers/: NetworkController.cpp  NetworkController.h
src/ui/dialogs/: customcalculatedcolumndialog.cpp  customcalculatedcolumndialog.h  customcsvdialog.cpp  customcsvdialog.h  customexceldialog.cpp  customexceldialog.h  customfecdialog.cpp  customfecdialog.h  customfilterdialog.cpp  customfilterdialog.h  customjsondialog.cpp  customjsondialog.h  custompdfdialog.cpp  custompdfdialog.h  customselectcolumnsdialog.cpp  customselectcolumnsdialog.h  customsqldialog.cpp  customsqldialog.h  customtxtdialog.cpp  customtxtdialog.h  customwebdialog.cpp  customwebdialog.h  customxmldialog.cpp  customxmldialog.h
src/ui/models/: DataTableModel.cpp  DataTableModel.h  TwoLineHeader.h
